--- a/index.html
+++ b/index.html
@@ -175,12 +175,13 @@
                             <p>El formato que trajo animación a la web primitiva.</p>
                             <button class="retro-btn" onclick="showGifGallery()">Ver Galería</button>
                         </div>
-                        <div class="exhibit-item">
-                            <img src="assets/images/midi.png" alt="MIDI" class="pixel-border">
-                            <h4>Música MIDI</h4>
-                            <p>Las melodías electrónicas que acompañaban muchos sitios web.</p>
-                            <button class="retro-btn" onclick="showMidiPlayer()">Reproducir Muestras</button>
-                        </div>
+                    <!-- Cambia esto en tu HTML -->
+<div class="exhibit-item">
+    <img src="assets/images/midi.png" alt="MIDI" class="pixel-border">
+    <h4>Música Retro</h4>
+    <p>Las melodías que acompañaban muchos sitios web.</p>
+    <button class="retro-btn" onclick="showAudioPlayer()">Reproducir Muestras</button>
+</div>
                         <div class="exhibit-item">
                             <img src="assets/images/flash.jpg" alt="Flash" class="pixel-border">
                             <h4>Adobe Flash</h4>
